--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@track) do |f| %>
+
+<%= form_for(@track, :html => {:multipart => true}) do |f| %>
   <% if @track.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@track.errors.count, "error") %> prohibited this track from being saved:</h2>
@@ -15,6 +16,12 @@
     <%= f.label :songs %><br />
     <%= f.text_field :songs %>
   </div>
+  
+  <div class="field">
+    <%= f.label "mp3" %><br />
+    <%= f.file_field :audio %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
